examples/test/testpolicy2863.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2863
  namespace: namespace101
spec:
  podSelector:
    matchLabels:
      key48: value18
      key43: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value19
          key47: value44
          key2: value27
      podSelector:
        matchLabels:
          key43: value5
          key44: value30
